:memo: Corrections to the planning section after revision #15

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -19,14 +19,14 @@
 	howpublished = {\url{https://www.gnu.org/licenses/agpl-3.0.html}}
 }
 
-@book{hujj,
+@Misc{hujj,
 	author       = {Juan Julián Merelo Guervós},
 	title        = {Calidad en una aplicación desde el diseño},
 	publisher = {\url{https://jj.github.io/curso-tdd/temas/dise%C3%B1o.html}},
 	year      = {2022}
 }
 
-@book{agiljj,
+@Misc{agiljj,
 	author       = {Juan Julián Merelo Guervós},
 	title        = {Desarrollo ágil},
 	publisher = {\url{https://jj.github.io/curso-tdd/temas/%C3%A1gil.html}},
@@ -46,5 +46,13 @@
   title = {Manifesto for Agile Software Development},
   url = {http://www.agilemanifesto.org/},
   year = {2001}
+}
+
+@misc{lis,
+  key = {Ley del Impuesto sobe Sociedades},
+  title = {Ley 27/2014, del Impuesto sobre Sociedades. «BOE» núm. 288, de 28 de noviembre},
+  url = {https://www.boe.es/eli/es/l/2014/11/27/27/con},
+  year = {2014},
+  timestamp = {2014-11-28}
 }
 
